workspace_errors_10.txt
cargo : warning: 
unused imports: 
`Ed25519SecretKey`, 
`MlKem768DecapsKey`, 
and `X25519SecretKey`
At line:1 char:1
+ cargo check 
--workspace --offline 
2>&1 | Out-File 
-FilePath workspace ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: unus   
 ed...25519SecretKe    
y`:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
 --> zero-identity\src\
keypair.rs:5:42
  |
5 | 
...:{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
  |                    
                  
^^^^^^^^^^^^^^^
6 | ...h::blake2b_256,
7 | ...::{MlKem768Decap
sKey, 
MlKem768EncapsKey, 
MlKem768Keypair},
  |       
^^^^^^^^^^^^^^^^^
8 | 
...n::{Ed25519Keypair, 
Ed25519PublicKey, 
Ed25519SecretKey},
  |                    
                      
^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-identity\src
\keypair.rs:11:15
   |
11 | ...::{Zeroize, 
ZeroizeOnDrop};
   |       ^^^^^^^  
^^^^^^^^^^^^^

warning: 
`zero-identity` (lib) 
generated 2 warnings 
(run `cargo fix --lib 
-p zero-identity` to 
apply 2 suggestions)
    Checking 
zero-ratchet v1.0.0 (C:
\Users\Revanth\Download
s\ZERO\zero-ratchet)
    Checking 
zero-transport v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-transport
)
    Checking 
zero-handshake v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-handshake
)
warning: unused 
import: `xor_distance`
 --> zero-dht\src\kbuck
et.rs:3:13
  |
3 | 
...::{xor_distance, 
N...
  |       ^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `ed25519_sign`
  --> zero-dht\src\node
_record.rs:12:46
   |
12 | ...e, 
ed25519_sign, e...
   |       ^^^^^^^^^^^^

warning: unused 
import: `K_BUCKET_SIZE`
 --> zero-dht\src\routi
ng_table.rs:4:34
  |
4 | ...o, 
K_BUCKET_SIZE},
  |       ^^^^^^^^^^^^^

warning: `zero-dht` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p zero-dht` 
to apply 3 suggestions)
warning: unused 
import: `Incoming`
  --> zero-transport\sr
c\quic.rs:10:35
   |
10 | use 
quinn::{Connection, 
Endpoint, Incoming};
   |                   
                
^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: 
`std::sync::Arc`
  --> zero-transport\sr
c\quic.rs:12:5
   |
12 | use 
std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0425]: cannot 
find function, tuple 
struct or tuple 
variant 
`MlKem768Ciphertext` 
in this scope
   --> zero-handshake\s
rc\x3dh.rs:137:22
    |
137 |         let 
kem_ct = MlKem768Cipher
text(init_msg.kem_ciphe
rtext.clone());
    |                  
    ^^^^^^^^^^^^^^^^^^ 
not found in this scope
    |
help: consider 
importing this tuple 
struct
    |
  3 + use zero_crypto::
MlKem768Ciphertext;
    |

warning: unused 
imports: `Deserialize` 
and `Serialize`
  --> zero-handshake\sr
c\noise.rs:12:13
   |
12 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  ^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: 
`X25519SecretKey`
  --> zero-handshake\sr
c\noise.rs:15:42
   |
15 |     
dh::{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
   |                   
                       
^^^^^^^^^^^^^^^

warning: unused 
import: `zero_identity:
:keypair::ZeroKeypair`
  --> zero-handshake\sr
c\noise.rs:19:5
   |
19 | use zero_identity:
:keypair::ZeroKeypair;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

error[E0432]: 
unresolved import 
`state::SessionInit`
  --> zero-ratchet\src\
lib.rs:25:49
   |
25 | pub use state::{Ra
tchetMessage, 
RatchetSession, 
SessionInit};
   |                   
                       
       ^^^^^^^^^^^ no 
`SessionInit` in 
`state`

error: missing 
documentation for a 
struct
  --> zero-transport\sr
c\nat.rs:6:1
   |
 6 | pub struct 
NatTraversal;
   | 
^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level 
is defined here
  --> zero-transport\sr
c\lib.rs:10:9
   |
10 | 
#![deny(missing_docs)]
   |         
^^^^^^^^^^^^

error: missing 
documentation for a 
struct
 --> zero-transport\src
\tcp_tls.rs:6:1
  |
6 | pub struct 
TcpFallback;
  | 
^^^^^^^^^^^^^^^^^^^^^^

warning: 
`zero-transport` (lib) 
generated 2 warnings
error: could not 
compile 
`zero-transport` (lib) 
due to 2 previous 
errors; 2 warnings 
emitted
warning: build failed, 
waiting for other jobs 
to finish...
For more information 
about this error, try 
`rustc --explain 
E0425`.
warning: 
`zero-handshake` (lib) 
generated 3 warnings
error: could not 
compile 
`zero-handshake` (lib) 
due to 1 previous 
error; 3 warnings 
emitted
For more information 
about this error, try 
`rustc --explain 
E0432`.
error: could not 
compile `zero-ratchet` 
(lib) due to 1 
previous error
